--- a/LogAnalyzer/WebRoot/app/partials/dashboard.html
+++ b/LogAnalyzer/WebRoot/app/partials/dashboard.html
@@ -65,13 +65,13 @@
     </div>
   </div>
 
-  <div class="row-fluid" ng-show='dashboard.current.editable'>
+  <!-- <div class="row-fluid" ng-show='dashboard.current.editable'>
     <div class="span12" style="text-align:right;">
       <span style="margin-left: 0px;" class="pointer btn btn-mini" bs-modal="'app/partials/dasheditor.html'">
         <span ng-click="editor.index = 1"><i class="icon-plus-sign"></i> ADD A ROW</span>
       </span>
     </div>
-  </div>
+  </div> -->
 
 
 </div>
